# PDFy

./: .gitignore  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  simple_test.txt  turbo.json  vercel.json
api/: index.py
apps/web/: index.html  package.json  tsconfig.json  vitest.config.ts
apps/web/prisma/: schema.prisma
apps/web/src/lib/: db.ts  env.ts
apps/web/tests/api/: health.test.ts
apps/web/tests/contracts/: scan-contracts.test.ts
docs/: README.md
docs/api/: contracts.md
docs/architecture/: analysis-pipeline.md  system-overview.md
docs/decisions/: ADR-0001-platform-architecture.md
docs/operations/: deployment.md
docs/product/: vision.md
docs/runbooks/: retention-cleanup.md
docs/schemas/: scan-result-schema.md
docs/security/: privacy.md
docs/superpowers/plans/: 2026-05-11-pdfy-production-mvp.md
docs/superpowers/specs/: 2026-05-11-pdf-malware-scanner-design.md
public/: index.html
services/analyzer/: pyproject.toml  tui.py
services/analyzer/app/: main.py  models.py
services/analyzer/app/routes/: analyze.py
services/analyzer/app/services/: deep_scan.py  fast_scan.py  hash_utils.py  pdf_extract.py
services/analyzer/pdfy_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/analyzer/tests/: test_fast_scan.py  test_health.py
