[project]
name = "pdfy-analyzer"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.9.0",
  "pytest>=8.3.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.34.0",
  "pikepdf>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
